--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rate-limit-ext",
-  "version": "1.3.2",
+  "version": "2.0.0",
   "description": "extended rate limit package for axios",
   "main": "src/index.js",
   "scripts": {
@@ -17,11 +17,9 @@
     "limit",
     "ext"
   ],
-  "files": [
-    "src/index.js"
-  ],
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "eslint": "^7.0.0"
   },
   "peerDependencies": {
     "axios": "*"
